Keep automatic action picker compatible with Android 12